41 new unit tests, callback and exception refactoring, numerous bugfixes.